--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
         android:background="#fff"
         android:ems="10"
         android:hint="Password"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:paddingLeft="135dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -109,6 +109,7 @@
         android:textAllCaps="false"
         android:layout_marginTop="14dp"
         android:background="#e70202"
+        android:onClick="signup"
         android:text="Sign Up Now"
         android:textColor="#fff"
         android:textSize="18sp"
@@ -120,6 +121,8 @@
         android:id="@+id/imageView"
         android:layout_width="117dp"
         android:layout_height="102dp"
+        android:contentDescription="Logo de l'application"
+        android:onClick="imageBtn"
         android:layout_marginEnd="133dp"
         android:layout_marginStart="83dp"
         android:layout_marginTop="5dp"
